# PST-TO-knowledge-for-AI

./: .gitignore  ARCHITECTURE.md  README.md  build_notebooklm_pack.py  build_notebooks.py  build_search_views.py  clean_and_cluster.py  config.sample.yaml  extract.py  main.py  pyproject.toml  requirements.txt  run_notebooklm_pipeline.py  search_emails.py  tag_with_llm.py
.github/workflows/: ci.yml
pst_kb/: __init__.py  cli.py  config.py  language.py  pipeline.py  processor.py
pst_kb/classifiers/: __init__.py  heuristics.py
pst_kb/cleaners/: __init__.py  email_cleaner.py
pst_kb/deduplication/: __init__.py  deduplicator.py
pst_kb/exporters/: __init__.py  files.py  sqlite.py
pst_kb/extractors/: __init__.py  base.py  readpst.py
pst_kb/models/: __init__.py  records.py
pst_kb/normalizers/: __init__.py  text.py
pst_kb/notebooklm/: __init__.py  build_notebooks.py  clean_cluster.py  common.py  docx_writer.py  extract_csv.py  llm_tagging.py  notebook_pack.py  notebook_pack_text.py  search_core.py  search_emails.py  search_views.py  topic_classifier.py  topic_taxonomy.py  workflow.py
pst_kb/parsers/: __init__.py  eml_parser.py
pst_kb/threading/: __init__.py  thread_builder.py
pst_kb/utils/: files.py  hashing.py  logging.py
tests/: test_cleaners.py  test_language.py  test_nested_eml_parser.py  test_normalizers.py  test_notebooklm_pack.py  test_notebooklm_workflow.py
