[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pst-analysis-toolkit"
version = "0.1.0"
description = "Local Python toolkit for PST email archive analysis"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "PST Analysis Toolkit Contributors" }
]
dependencies = [
    "pydantic>=2.6",
    "beautifulsoup4>=4.12",
    "langdetect>=1.0.9",
    "PyYAML>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "tqdm>=4.66",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.6",
    "lxml>=4.9",
    "python-dateutil>=2.8",
    "charset-normalizer>=3.3",
    "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
pst-kb = "pst_kb.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120
